--- a/Testing/index.html
+++ b/Testing/index.html
@@ -458,7 +458,7 @@
     //let sidh=function(id,val){if(gid(id)==null || val==null){console.log(id);return "";};return document.getElementById(id).innerHTML=val;};
     let HiddenInput = (idname, val, other = "") => {
       return (
-        "<input type=hidden " +
+        "<input type=text hidden " +
         other +
         " id='" +
         idname +
