--- a/404.html
+++ b/404.html
@@ -305,6 +305,7 @@
                             if (!page)
                                 page =
                                     "Home"
+                            console.log("page",page);
                             request(
                                 staff[1],
                                 "putins_make_page_from_gdoc",
