--- a/Testing/index.html
+++ b/Testing/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Academics for you</title>
     <link rel="stylesheet" type="text/css" href="/css/variables.css" />
+    <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
     <link
       rel="stylesheet"
       type="text/css"
