--- a/404.html
+++ b/404.html
@@ -108,6 +108,7 @@
             type="text/css"
             href="/website-modules/design/keyframes/plain.css"
         />
+        <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet">
         <!-- /website-modules -->
     </head>
     <body>
