--- a/editsite/index.html
+++ b/editsite/index.html
@@ -4,7 +4,38 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>a4u Edit Site</title>
-    <link rel="stylesheet" type="text/css" href="/css/variables.css" />
+<link rel="icon" href="https://a4u.co.in/favicon.ico" type="image/icon type">
+  
+<style>
+  .footer {
+     left: 0;
+     bottom: 0;
+     width: 100%;
+     color: white;
+  }
+
+  body {
+    margin:0px;
+    padding:0px;
+    height:100vh;
+    overflow:hidden;
+  }
+  iframe {
+    display: block;
+    border: none;
+    height: 100vh; 
+    width: 100vw;
+    /*background-color:#FEF5E7;*/
+}
+
+</style>
+<script>
+function setPage(){
+  var myiframe=document.getElementById("myiframe");
+  myiframe.scr=myiframe.src+window.location.search
+}
+</script>
+  
   </head>
 <body onload="setPage();" >
 
