--- a/404.html
+++ b/404.html
@@ -197,7 +197,7 @@
             class="cont1"
             id="contact"
         >
-            <span style="float:left;padding-top: 1%; padding-right: 1%;" > . </span>
+            <span id="sEditor" style="float:left;padding-top: 1%; padding-right: 1%;" > . </span>
             <span
                 style="
                     float: right;
