--- a/404.html
+++ b/404.html
@@ -296,6 +296,7 @@
                                 )
                                 .toLowerCase()
                         ) {
+                            document.getElementById("sEditor").innerHTML="Edited By "+path_arr[1].toLowerCase();
                             document.getElementsByTagName(
                                 "title"
                             )[0].innerText =
