--- a/404.html
+++ b/404.html
@@ -296,7 +296,7 @@
                                 )
                                 .toLowerCase()
                         ) {
-                            document.getElementById("sEditor").innerHTML="Edited By "+path_arr[1].toLowerCase();
+                            document.getElementById("sEditor").innerHTML="Page Editor: <i>"+path_arr[1].toLowerCase()+"</i>;
                             document.getElementsByTagName(
                                 "title"
                             )[0].innerText =
