--- a/404.html
+++ b/404.html
@@ -296,7 +296,7 @@
                                 )
                                 .toLowerCase()
                         ) {
-                            document.getElementById("sEditor").innerHTML="Page Editor: <i>"+path_arr[1].toLowerCase()+"</i>";
+                            document.getElementById("sEditor").innerHTML="Page Editor: <span style='font-style:italic;'>"+staff[0]+"</span>";
                             document.getElementsByTagName(
                                 "title"
                             )[0].innerText =
