--- a/Testing/index.html
+++ b/Testing/index.html
@@ -31,13 +31,13 @@ ul.no-bullets {   list-style-type: none;   margin: 0;   padding: 0; }
 </head>
 <body>
 <header><img style="width:100%" src="https://a4u.co.in/images/logo.jpg" /></header>
-<div id=scrolltext>Scroll Text</div>
+<div id=scrolltext></div>
 <div class="row">
   <div class="column col1" >
-    <div id=navmenu>navmenu</div>
+    <div id=navmenu></div>
   </div>
   <div class="column col2">
-    <div id=contents_page>contents_page</div>
+    <div id=contents_page></div>
   </div>
 </div>
 
