--- a/404.html
+++ b/404.html
@@ -129,6 +129,7 @@
                 style="
                     text-align: center;
                     overflow: hidden;
+                    white-space: nowrap;
                     background-color: var(
                         --main-color-2
                     );
