--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 style="
                     text-align: center;
                     overflow: hidden;
+                    white-space: nowrap;
                     background-color: var(
                         --main-color-2
                     );
