--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                         );
                         margin-top: 4px;
                         margin-bottom: 4px;
-                        animation: move_lr
-                            16s infinite;
+                        animation: scroll 30s linear infinite;
                     "
                     class="cont1"
                 >
