--- a/login/index.html
+++ b/login/index.html
@@ -3,402 +3,47 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Academics for you</title>
-    <link rel="stylesheet" type="text/css" href="/css/variables.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/design/layout.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/design/default.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/nav/nav.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/table/table.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/form/form.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/button/button.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/media/img/in-page-images.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/media/img/background-images.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/utils/putins/putins.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/media/media.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/design/keyframes/plain.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/elements/iframe/iframe-svg.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/website-modules/svg/svg.css"
-    />
-    <link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="/rtf/trumbowyg.colors.min.css"
-    />
-    <!-- /website-modules -->
+    <title>a4u Edit Site</title>
+<link rel="icon" href="https://a4u.co.in/favicon.ico" type="image/icon type">
+  
+<style>
+  .footer {
+     left: 0;
+     bottom: 0;
+     width: 100%;
+     color: white;
+  }
+
+  body {
+    margin:0px;
+    padding:0px;
+    height:100vh;
+    overflow:hidden;
+  }
+  iframe {
+    display: block;
+    border: none;
+    height: 100vh; 
+    width: 100vw;
+    /*background-color:#FEF5E7;*/
+}
+
+</style>
+<script>
+function setPage(){
+  var myiframe=document.getElementById("myiframe");
+  myiframe.scr=myiframe.src+window.location.search
+  console.log(myiframe.scr);
+}
+</script>
+  
   </head>
-  <body>
-    <header class="cont1" style="margin: 0">
-      <img class="cont1" src="/images/logo.jpg" />
-    </header>
-    <main class="cont1">
-      <form
-        class="media1"
-        onsubmit="event.preventDefault();form_wait(event.target);form_JSON_send(event.target)"
-        class="u1"
-        data-form-submit-target="https://script.google.com/macros/s/AKfycbz-Bg89XVc3A79ZF0B5TdFmDvDLSBZbCu2sNe19PBeFIbtLt-hsuX5kJwxdZnBv17YT/exec"
-        data-custom-JSON-to-send-string='{"gscript_callback_function": "login_or_delete"}'
-        data-show-id="no"
-        style="display: none"
-        id="login_form"
-      >
-        <table class="u1">
-          <tr>
-            <td colspan="2">
-              <h4>Please enter the credentials:</h4>
-            </td>
-          </tr>
-          <tr>
-            <td style="width: 25%">User group:</td>
-            <td>
-              <select
-                id="roles"
-                onchange="document.getElementById('login_type').innerText=this.value;"
-                name="user_group"
-              ></select>
-            </td>
-          </tr>
-          <tr>
-            <td style="width: 25%">User name:</td>
-            <td>
-              <input type="text" name="username" required />
-            </td>
-          </tr>
-          <tr>
-            <td>Password:</td>
-            <td>
-              <input type="password" name="password" required />
-            </td>
-          </tr>
-          <tr>
-            <td>Task:</td>
-            <td>
-              <select
-                onchange="if(this.value=='delete'){this.parentElement.parentElement.insertAdjacentHTML('afterend','<tr id=\'ref_no\'><td>Reference no.:</td><td><input type=\'text\' name=\'ref_no\' placeholder=\'HOD/1\' required></td></tr>');document.getElementById('submit_button').value='Delete notice';}else{document.getElementById('ref_no').outerHTML='';document.getElementById('submit_button').value='Submit';}"
-                name="task"
-              >
-                <option value="add">Add notice</option>
-                <option value="delete">Delete notice</option>
-              </select>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <div class="media1">
-                <div class="media1">
-                  <input
-                    id="submit_button"
-                    class="u1"
-                    style="margin-top: 0"
-                    type="submit"
-                    name="Submit"
-                    value="Login"
-                  />
-                </div>
-              </div>
-            </td>
-          </tr>
-        </table>
-      </form>
+<body onload="setPage();" >
 
-      <form
-        class="media1"
-        onsubmit="event.preventDefault();form_wait(event.target);form_JSON_send(event.target)"
-        class="u1"
-        data-form-submit-target="https://script.google.com/macros/s/AKfycbz-Bg89XVc3A79ZF0B5TdFmDvDLSBZbCu2sNe19PBeFIbtLt-hsuX5kJwxdZnBv17YT/exec"
-        data-custom-JSON-to-send-string='{"gscript_callback_function": "notice_post"}'
-        data-show-id="no"
-        data-send-creds="yes"
-        id="notice_form"
-        style="display: none"
-      >
-        <span>You are logged in as <span id="login_type">HOD</span>.</span>
-        <table class="u1" style="overflow-x: scroll">
-          <tr>
-            <td colspan="2">
-              <h4>Add a notice:</h4>
-            </td>
-          </tr>
-          <tr>
-            <td style="width: 25%; min-width: 80px">Title:</td>
-            <td>
-              <input
-                type="text"
-                name="notice_title"
-                autocomplete="off"
-                required
-                style="width: 100%"
-              />
-              <br />
-              This will be only visible in the index and home page. This will
-              not be displayed in the notice contents.
-            </td>
-          </tr>
-          <tr>
-            <td>Date:</td>
-            <td>
-              <input
-                type="date"
-                name="notice_date"
-                id="notice_date"
-                required
-                disabled
-              />
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              Notice is for
-              <select name="student_year">
-                <option value="all">all</option>
-                <option value="SE">SE</option>
-                <option value="TE">TE</option>
-                <option value="BE">BE</option>
-              </select>
-              year
-              <select name="student_stream">
-                <option value="all">all</option>
-                <option value="MECH">MECH</option>
-                <option value="MSW">MSW</option>
-              </select>
-              stream
-              <select name="student_division">
-                <option value="all">all</option>
-                <option value="I">I</option>
-                <option value="II">II</option>
-                <option value="III">III</option>
-              </select>
-              division students.
-            </td>
-          </tr>
-          <tr>
-            <td>Notice contents:</td>
-            <td>
-              <!-- <div name="notice_contents" contenteditable="true" style="min-height: 400px;"></div> -->
-              <div name="notice_contents" id="notice_contents"></div>
-              Copy your notice from Microsoft office word, or similer software.
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <div class="media1">
-                <div class="media1">
-                  <input
-                    class="u1"
-                    style="margin-top: 0"
-                    type="submit"
-                    name="Submit"
-                    value="Add notice"
-                  />
-                </div>
-              </div>
-            </td>
-          </tr>
-        </table>
-      </form>
-      <section id="myTasks" class="cont1"></section>
-      <section
-        id="contents_page"
-        class="cont1 gdoc_published_contents"
-      ></section>
-    </main>
-
-    <footer class="cont1" id="contact">
-      <span
-        style="float: right; float: right; padding-top: 1%; padding-right: 1%"
-        >Developed by Dr. Vinayak Kale</span
-      >
-    </footer>
-  </body>
+      <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec">
+        <p>Error Occured.</p>
+      </iframe>
+      <script>if(document.URL.split("?")[1]!=null){document.getElementById('myiframe').src = document.getElementById('myiframe').src+"?"+document.URL.split("?")[1];}</script>
+</body>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
-  <script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-  <script
-    src="/website-modules/includes/request/request.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/includes/request/google.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/design/default.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/elements/media/img/background-images.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/elements/button/button.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/elements/form/form.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/utils/putins/putins.js"
-    type="text/javascript"
-  ></script>
-  <script
-    src="/website-modules/utils/putins/google.js"
-    type="text/javascript"
-  ></script>
-  <script src="/website-modules/svg/svg.js" type="text/javascript"></script>
-  <script
-    src="/website-modules/elements/nav/nav.js"
-    type="text/javascript"
-  ></script>
-
-  <script type="text/javascript">
-    function show_notice_form() {
-      document.getElementById("notice_form").style.display = "revert";
-      document.getElementById("notice_date").value = new Date()
-        .toJSON()
-        .substr(0, 10);
-      if (document.getElementById("login_type").innerText == "HOD") {
-        document.getElementById("notice_date").removeAttribute("disabled");
-      } else {
-        document.getElementById("notice_date").setAttribute("disabled", "");
-      }
-    }
-    if (sessionStorage) {
-      if (sessionStorage.getItem("role") && sessionStorage.getItem("rolekey")) {
-        show_notice_form();
-      } else {
-        document.getElementById("login_form").style.display = "revert";
-      }
-    } else {
-      document.getElementById("login_form").style.display = "revert";
-    }
-    function form_show_next() {
-      show_notice_form();
-      request(
-        "https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true",
-        "putin_paste",
-        document.getElementById("contents_page"),
-        "request_gdoc_published_inline_contents"
-      );
-    }
-    window.addEventListener("beforeunload", function () {
-      sessionStorage.clear();
-    });
-  </script>
-  <script type="text/javascript">
-    $("#notice_contents").trumbowyg({
-      btns: [
-        // ['viewHTML'],
-        ["undo", "redo"], // Only supported in Blink browsers
-        ["formatting"],
-        ["strong", "em", "del"],
-        // ['superscript', 'subscript'],
-        ["link"],
-        ["insertImage"],
-        ["justifyLeft", "justifyCenter", "justifyRight", "justifyFull"],
-        ["unorderedList", "orderedList"],
-        ["foreColor", "backColor"],
-        ["horizontalRule"],
-        ["removeformat"],
-        // ['fullscreen']
-      ],
-      plugins: {
-        colors: {
-          colorList: ["000", "888", "f00", "0f0", "00f"],
-        },
-      },
-      autogrow: true,
-    });
-  </script>
-  <script type="text/javascript">
-    // 		request_promise("https://n.static-data.ameonlinesolutions.com/mech/roles.json")
-    // 			.then(
-    // 				(res)=>
-    // 				{
-    // 					const roles=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["roles"];
-    const roles = [
-      "HOD",
-      "Faculty",
-      "Placement",
-      "iMESA",
-      "Project",
-      "Exam",
-      "Exam052",
-    ];
-    for (let role of roles) {
-      document
-        .getElementById("roles")
-        .insertAdjacentHTML(
-          "beforeend",
-          '<option value="' + role + '">' + role + "</option>"
-        );
-    }
-
-    // 				},
-    // 				(error)=>
-    // 				{
-    // 					console.error(error);
-    // 					document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>"
-    // 				});
-  </script>
-
-  <style type="text/css">
-    #notice_contents * {
-      list-style-type: revert;
-      margin: revert;
-      color: revert;
-      background-color: revert;
-    }
-  </style>
 </html>
