--- a/login/index.html
+++ b/login/index.html
@@ -40,10 +40,9 @@ function setPage(){
   </head>
 <body onload="setPage();" >
 
-      <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec">
+      <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec?type=login">
         <p>Error Occured.</p>
       </iframe>
-      <script>if(document.URL.split("?")[1]!=null){document.getElementById('myiframe').src = document.getElementById('myiframe').src+"?"+document.URL.split("?")[1];}</script>
 </body>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </html>
