--- a/login/index.html
+++ b/login/index.html
@@ -40,7 +40,7 @@ function setPage(){
   </head>
 <body onload="setPage();" >
 
-      <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec?type=login">
+      <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec">
         <p>Error Occured.</p>
       </iframe>
       <script>document.getElementById('myiframe').src = document.getElementById('myiframe').src+"?type=Login"</script>
