--- a/login/index.html
+++ b/login/index.html
@@ -45,7 +45,7 @@ function setPage(){
         >
             <img
                 class="cont1"
-                src="./images/logo.jpg"
+                src="../images/a4u-Header-thin.jpg"
             />
         </header>
 
