--- a/login/index.html
+++ b/login/index.html
@@ -44,7 +44,7 @@ function setPage(){
             style="margin: 0"
         >
             <img
-                class="cont1"
+                class="cont1" style="width:100%;"
                 src="../images/a4u-Header-thin.jpg"
             />
         </header>
