--- a/editsite/index.html
+++ b/editsite/index.html
@@ -38,6 +38,15 @@ function setPage(){
   
   </head>
 <body onload="setPage();" >
+        <header
+            class="cont1"
+            style="margin: 0"
+        >
+            <img
+                class="cont1" style="width:100%;"
+                src="../images/a4u-Header-thin.jpg"
+            />
+        </header>
 
       <iframe id=myiframe allow="camera;microphone;" allowtransparency="true" seamless frameborder="0" padding="0" src="https://script.google.com/macros/s/AKfycbwippsFYPcl3635LMH9JvoIuYYCbMzfblPotZ_9PtkB9MeHoj8Rt05H977XW7JVVq6YBA/exec">
         <p>Error Occured.</p>
