--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -227,7 +227,7 @@
             <td>
               <!-- <div name="notice_contents" contenteditable="true" style="min-height: 400px;"></div> -->
               <div name="notice_contents" id="notice_contents"></div>
-              Copy your notice from Microsoft office word, or similer software.
+              Copy your notice from Microsoft office word, or similar software.
             </td>
           </tr>
           <tr>
