--- a/editsite/index.html
+++ b/editsite/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>a4u Edit Site</title>
+    <title>a4u Login</title>
 <link rel="icon" href="https://a4u.co.in/favicon.ico" type="image/icon type">
   
 <style>
