--- a/404.html
+++ b/404.html
@@ -335,6 +335,7 @@
                 }
             )
         } else {
+            console.log("lps",location.pathname.substring(8));
             document.getElementById(
                 "contents_page"
             ).innerHTML =
