--- a/404.html
+++ b/404.html
@@ -267,6 +267,7 @@
             location.pathname.split("/")
         console.log(path_arr[1]);
         if (path_arr[1] == "forms") {
+            console.log("Forms will be shown here.",location.pathname)
             document.getElementById(
                         "contents_page"
                     ).innerHTML =
