--- a/404.html
+++ b/404.html
@@ -267,13 +267,12 @@
             location.pathname.split("/")
         console.log(path_arr[1]);
         if (path_arr[1] == "forms") {
-            console.log("Forms will be shown here.",location.pathname)
+            console.log("Forms will be shown here.",location.pathname);
             document.getElementById(
                         "contents_page"
                     ).innerHTML =
                         "<big>Forms will be shown here.</big>"
-        }
-        if (path_arr[1] != "notice") {
+        }else if (path_arr[1] != "notice") {
             request_promise(
                 "https://static-data.a4u.co.in/mech/staff-gdoc-links.json"
             ).then(
