--- a/404.html
+++ b/404.html
@@ -272,6 +272,18 @@
                         "contents_page"
                     ).innerHTML =
                         "<big>Forms will be shown here.</big>"
+            request_promise(
+                "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=showFormForAll&l=" +
+                    location.pathname
+                    )
+            ).then(
+                (res) => {
+                    document.getElementById(
+                        "contents_page"
+                    ).innerHTML = res;
+                }
+            )
+            
         }else if (path_arr[1] != "notice") {
             request_promise(
                 "https://static-data.a4u.co.in/mech/staff-gdoc-links.json"
