--- a/404.html
+++ b/404.html
@@ -271,7 +271,7 @@
             document.getElementById(
                         "contents_page"
                     ).innerHTML =
-                        "<big>Forms will be shown here.</big>"
+                        "<br>Loading form ..."
             request_promise(
                 "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=showFormForAll&l=" +
                     location.pathname
