--- a/404.html
+++ b/404.html
@@ -263,6 +263,7 @@
         type="text/javascript"
     ></script>
     <script type="text/javascript">
+        console.log(location);
         let path_arr =
             location.pathname.split("/")
         console.log(path_arr[1]);
