--- a/404.html
+++ b/404.html
@@ -275,7 +275,7 @@
                         "<br>Loading form ..."
             request_promise(
                 "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=showFormForAll&l=" +
-                    location.pathname + "&search=" + location.search
+                    location.pathname + "&search=" + location.search.replaceAll("?","").replaceAll("&","//")
             ).then(
                 (res) => {
                     document.getElementById(
