--- a/404.html
+++ b/404.html
@@ -263,18 +263,18 @@
         type="text/javascript"
     ></script>
     <script type="text/javascript">
-        console.log(location.search);
+        //console.log(location.search);
         let path_arr =
             location.pathname.split("/")
         console.log(path_arr[1]);
         if (path_arr[1] == "forms") {
-            console.log("Forms will be shown here.",location.pathname);
+            //console.log("Forms will be shown here.",location.pathname);
             document.getElementById(
                         "contents_page"
                     ).innerHTML =
                         "<br>Loading form ..."
             request_promise(
-                "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=showFormForAll&l=" +
+                "https://script.google.com/macros/s/AKfycbzy53ifIUTm2YNc_T_uv1Y0RV0PaLlE8i00V2DTvzBFCuG1Q8ocrvguw4mKUfkiykJSHA/exec?fn=showAndSaveFormForAll&l=" +
                     location.pathname + "&search=" + location.search.replaceAll("?","").replaceAll("&","//")
             ).then(
                 (res) => {
