--- a/login/index.html
+++ b/login/index.html
@@ -33,7 +33,7 @@
 function setPage(){
   var myiframe=document.getElementById("myiframe");
   myiframe.scr=myiframe.src+window.location.search
-  console.log(myiframe.scr);
+  // console.log(myiframe.scr);
 }
 </script>
   
